                     CHANGES version 5.8

           This file summarizes changes made since 5.0


Version 5.8

New: Monit no longer purge the environment for sub-processes

Fixed: https://bitbucket.org/tildeslash/monit/issue/7/enable-optimized-error-with-flag-ofast


Version 5.7

New: Merged https://bitbucket.org/tildeslash/monit/pull-request/1/
from Philippe Kueck:
1) Handle sockets (unix domain) as regular files when checking timestamp.
2) Use mysql 4.1 protocol in MySQL check, required for checking mysql-proxy
3) Skip connection checks during startup timeout.

New: Arguments added to 'check program'. Arguments are whitespace
separated strings. For instance:

  check program list-files with path "/bin/ls -l -r -t /tmp"
        if status != 0 then alert

New: Implemented restart as an optional service action. When Monit
is called to restart a service, it previously called the stop
program registered with the service and then the start program.
Now, if a restart program is registred with the service, this
will be called instead, otherwise Monit fall back to its old
behaviour. Example:
     
  check process apache with pidfile /var/run/httpd.pid
        start   = "/usr/sbin/apachectl start"
        stop    = "/usr/sbin/apachectl stop"
        restart = "/usr/sbin/apachectl restart" <- New

New: Improved communication with M/Monit. Thanks to Hippo Lin. For 
scalability purpose, this Monit version should only be used with
M/Monit version 3.1 or later.


BUGFIXES:


* Monit stopped if an error occurred during MTA connection close.

* Make the Memcache protocol test faster.

* Solaris zone: fix system memory usage report.

* Use chiper list with SSL server instead of relying on default


Version 5.6

IMPROVEMENTS:

* SMTP AUTH LOGIN support added (MS Exchange SMTP authentication
  should now work).

* favicon.ico added to the HTTP interface.

BUGFIXES:

* If an undefined checksum test was used and the file did not exist
  on Monit start, Monit would return an error.
